--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,55 @@
-# Byte-compiled / optimized / DLL files
+##############################################
+# OS-specific
+##############################################
+.DS_Store
+Thumbs.db
+ehthumbs.db
+Desktop.ini
+$RECYCLE.BIN/
+
+##############################################
+# Visual Studio
+##############################################
+## User-specific files
+*.rsuser
+*.suo
+*.user
+*.userosscache
+*.sln.docstates
+
+## Build results
+[Bb]in/
+[Oo]bj/
+[Ll]og/
+*.log
+
+## VS settings
+.vs/
+*.vc.db
+*.VC.db
+*.ncb
+*.aps
+*.ilk
+*.pdb
+*.opendb
+
+## NuGet
+*.nupkg
+**/packages/*
+!**/packages/build/
+!**/packages/repositories.config
+.nuget/
+
+## Azure
+.scm/
+
+## Rider / JetBrains
+.idea/
+*.sln.iml
+
+##############################################
+# Python
+##############################################
 __pycache__/
 *.py[cod]
 *$py.class
@@ -6,7 +57,16 @@ __pycache__/
 # C extensions
 *.so
 
-# Distribution / packaging
+# Environments
+.env
+.venv
+env/
+venv/
+ENV/
+env.bak/
+venv.bak/
+
+# Packaging
 .Python
 build/
 develop-eggs/
@@ -27,8 +87,6 @@ share/python-wheels/
 MANIFEST
 
 # PyInstaller
-#  Usually these files are written by a python script from a template
-#  before PyInstaller builds the exe, so as to inject date/other infos into it.
 *.manifest
 *.spec
 
@@ -47,114 +105,115 @@ nosetests.xml
 coverage.xml
 *.cover
 *.py,cover
-.hypothesis/
 .pytest_cache/
-cover/
+.hypothesis/
 
-# Translations
-*.mo
-*.pot
-
-# Django stuff:
+# Django
 *.log
 local_settings.py
 db.sqlite3
 db.sqlite3-journal
 
-# Flask stuff:
+# Flask
 instance/
 .webassets-cache
 
-# Scrapy stuff:
+# Scrapy
 .scrapy
 
-# Sphinx documentation
+# Sphinx docs
 docs/_build/
 
 # PyBuilder
 .pybuilder/
 target/
 
-# Jupyter Notebook
+# Jupyter
 .ipynb_checkpoints
 
 # IPython
 profile_default/
 ipython_config.py
 
-# pyenv
-#   For a library or package, you might want to ignore these files since the code is
-#   intended to run in multiple environments; otherwise, check them in:
-# .python-version
-
-# pipenv
-#   According to pypa/pipenv#598, it is recommended to include Pipfile.lock in version control.
-#   However, in case of collaboration, if having platform-specific dependencies or dependencies
-#   having no cross-platform support, pipenv may install dependencies that don't work, or not
-#   install all needed dependencies.
-#Pipfile.lock
-
-# poetry
-#   Similar to Pipfile.lock, it is generally recommended to include poetry.lock in version control.
-#   This is especially recommended for binary packages to ensure reproducibility, and is more
-#   commonly ignored for libraries.
-#   https://python-poetry.org/docs/basic-usage/#commit-your-poetrylock-file-to-version-control
-#poetry.lock
-
-# pdm
-#   Similar to Pipfile.lock, it is generally recommended to include pdm.lock in version control.
-#pdm.lock
-#   pdm stores project-wide configurations in .pdm.toml, but it is recommended to not include it
-#   in version control.
-#   https://pdm.fming.dev/#use-with-ide
+# pyenv / pipenv / poetry / pdm
+.python-version
+Pipfile.lock
+poetry.lock
+pdm.lock
 .pdm.toml
-
-# PEP 582; used by e.g. github.com/David-OConnor/pyflow and github.com/pdm-project/pdm
 __pypackages__/
 
-# Celery stuff
-celerybeat-schedule
-celerybeat.pid
-
-# SageMath parsed files
-*.sage.py
-
-# Environments
-.env
-.venv
-env/
-venv/
-ENV/
-env.bak/
-venv.bak/
-
-# Spyder project settings
-.spyderproject
-.spyproject
-
-# Rope project settings
-.ropeproject
-
-# mkdocs documentation
-/site
-
-# mypy
+# Mypy / Pyre / Pytype
 .mypy_cache/
+.pyre/
+.pytype/
 .dmypy.json
 dmypy.json
 
-# Pyre type checker
-.pyre/
-
-# pytype static type analyzer
-.pytype/
-
-# Cython debug symbols
+# Cython
 cython_debug/
 
-# PyCharm
-#  JetBrains specific template is maintained in a separate JetBrains.gitignore that can
-#  be found at https://github.com/github/gitignore/blob/main/Global/JetBrains.gitignore
-#  and can be added to the global gitignore or merged into this file.  For a more nuclear
-#  option (not recommended) you can uncomment the following to ignore the entire idea folder.
-#.idea/
+##############################################
+# CMake
+##############################################
+CMakeFiles/
+CMakeCache.txt
+cmake-build-*/
+CMakeSettings.json
+
+##############################################
+# VS Code
+##############################################
+.vscode/
+.code-workspace
+
+##############################################
+# Common
+##############################################
+*.bak
+*.tmp
+*.swp
+*.swn
+*.swo
+*.orig
+
+# Logs
+*.log
+
+# Databases
+*.db
+*.sqlite
+*.sqlite3
+*.mdf
+*.ldf
+
+# Coverage and test results
+TestResults/
+*.ncrunch*
+*.coverage
+
+# Lock files
+package-lock.json
+yarn.lock
+
+##############################################
+# Optional extras
+##############################################
+*.class
+*.jar
+*.war
+*.iml
+*.ipr
+*.iws
+*.out
+*.exe
+*.dll
+*.obj
+*.lib
+*.idb
+
+# Node
+node_modules/
+
+# Java
+target/
