--- a/UKDownloader/UKDownloader.csproj
+++ b/UKDownloader/UKDownloader.csproj
@@ -27,6 +27,7 @@
 		<PackageReference Include="Avalonia.Themes.Fluent" Version="11.2.6" />
 		<PackageReference Include="Avalonia.Fonts.Inter" Version="11.2.6" />
 		<PackageReference Include="CommunityToolkit.Mvvm" Version="8.4.0" />
+		<PackageReference Include="DiscordRichPresence" Version="1.2.1.24" />
 		<PackageReference Include="System.IO.Compression.ZipFile" Version="4.3.0" />
 		<PackageReference Include="System.Windows.Extensions" Version="9.0.3" />
 		<PackageReference Include="YamlDotNet" Version="16.3.0" />
